fixed bug with fullscreen on mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -23,20 +23,23 @@
 @media only screen and (max-height: 480px) {
   canvas {
     height: 100vh;
+    width: 100vw;
     border-radius: unset;
   }
   .mainContainer {
     height: 100vh;
+    width: 100vw;
   }
 
   .startScreenBg {
     height: 100vh;
-    width: auto;
+    width: 100vw;
     border-radius: unset;
   }
 
   #gameInfos {
     height: 100vh;
+    width: 100vw;
     border-radius: unset;
   }
 
